--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
    "forceConsistentCasingInFileNames": true,           
    "strict": true,                                     
    "skipLibCheck": true,
-   "moduleResolution": "node"                              
+   "moduleResolution": "node",
+   "experimentalDecorators": true              
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"] // Exclui a pasta node_modules
