--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
@@ -22,9 +25,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.5"
   }
 }
