feat: adding url shortener with the clicks count + function to get the userId from the jwt

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_USER=admin
 DB_PASSWORD=admin1
 DB_DATABASE=urlshortener
-JWT_KEY=key
+JWT_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZFVzZXIiOiIiLCJuYW1lIjoiIn0.W6aPleOqaCCDKWEVPLjB92elM5NIIXZD5GItScSdqww
