--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "src",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon",
     "dev": "nodemon --watch src --ext ts --exec \"npx ts-node src/index.ts\"",
-    "test:coverage": "npx jest --coverage --watchAll"
+    "test:coverage": "npx jest --coverage --watchAll",
+    "prepare": "husky install",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write .",
+    "test": "jest",
+    "pre-commit": "npm run lint && npm run test"
   },
   "keywords": [],
   "author": "",
@@ -45,6 +49,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/swagger-ui-express": "^4.1.7",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "ts-jest": "^29.2.5",
